--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                         <div>Categories <i class="fa-solid fa-sort-down"></i></div>
                         <ul class="categ-list"></ul>
                     </li class="link">
-                    <li class="link"><a href="./products.html">Products</a></li>
+                    <li class="link"><a href="./products">Products</a></li>
                     <li class="link"><a href="#about">About Us</a></li>
                     <li class="link"><a href="#contact">Contact</a></li>
-                    <li class="login link"><a href="./login.html">Login</a></li>
+                    <li class="login link"><a href="./login">Login</a></li>
                   </ul>
                   <label class="dark-container">
                     <input type="checkbox" id="dark-mode">
@@ -75,7 +75,7 @@
             <div class="container">
                 <div class="text">
                     <h3>Popular Now</h3>
-                    <a href="./products.html">SEE MORE ❯</a>
+                    <a href="./products">SEE MORE ❯</a>
                 </div>
                 <div class="slider-container">
                     <div class="slider-btn prev">❮</div>
