--- a/login.html
+++ b/login.html
@@ -42,19 +42,19 @@
   <header>
     <div class="container">
       <div class="logo">
-        <a href="./index.html"><i class="fas fa-shopping-cart"></i> ShopyVilla</a>
+        <a href="./"><i class="fas fa-shopping-cart"></i> ShopyVilla</a>
       </div>
       <div class="secondary-container">
         <i class="fas fa-bars toggle-menu toggle-icon"></i>
         <ul class="links">
-          <li class="link"><a href="./index.html">Home</a></li>
+          <li class="link"><a href="./">Home</a></li>
           <li class="link categ">
             <div>Categories <i class="fa-solid fa-sort-down"></i></div>
             <ul class="categ-list"></ul>
           </li class="link">
-          <li class="link"><a href="./products.html">Products</a></li>
-          <li class="link"><a href="./index.html#about">About Us</a></li>
-          <li class="link"><a href="./index.html#contact">Contact</a></li>
+          <li class="link"><a href="./products">Products</a></li>
+          <li class="link"><a href="./#about">About Us</a></li>
+          <li class="link"><a href="./#contact">Contact</a></li>
           <li class="login link active"><a href="#">Login</a></li>
         </ul>
         <label class="dark-container">
